jkind-server/src/main/java/com/ecnu/synlong/parser/synlong/gen/SynlongParser.java
// Generated from jkind-server/src/main/java/com/ecnu/synlong/parser/synlong/Synlong.g4 by ANTLR 4.13.2
package com.ecnu.synlong.parser.synlong.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SynlongParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9,
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17,
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24,
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31,
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38,
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45,
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52,
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59,
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66,
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73,
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80,
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87,
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94,
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101,
		T__101=102, T__102=103, T__103=104, IF=105, VAR=106, LET=107, TEL=108,
		STATE=109, UNLESS=110, UNTIL=111, RESUME=112, RESTART=113, INITIAL=114,
		FINAL=115, AUTOMATON=116, RETURNS=117, ID=118, CHAR=119, INTEGER=120,
		UINT=121, FLOAT=122, REAL=123, USHORT=124, SHORT=125, COMMENT=126, WS=127;
	public static final int
		RULE_program = 0, RULE_decls = 1, RULE_type_block = 2, RULE_type_decl = 3,
		RULE_type_def = 4, RULE_type_expr = 5, RULE_field_decl = 6, RULE_typevar = 7,
		RULE_const_block = 8, RULE_const_decl = 9, RULE_const_expr = 10, RULE_const_list = 11,
		RULE_const_label_expr = 12, RULE_user_op_decl = 13, RULE_op_kind = 14,
		RULE_params = 15, RULE_returns_clause = 16, RULE_op_body = 17, RULE_local_block = 18,
		RULE_var_decls = 19, RULE_var_id = 20, RULE_when_decl = 21, RULE_clock_expr = 22,
		RULE_last_decl = 23, RULE_equation = 24, RULE_lhs = 25, RULE_lhs_id = 26,
		RULE_return_statement = 27, RULE_returns_var = 28, RULE_state_machine = 29,
		RULE_state_decl = 30, RULE_state_body = 31, RULE_let_block = 32, RULE_transition = 33,
		RULE_expr = 34, RULE_simple_expr = 35, RULE_tempo_expr = 36, RULE_bool_expr = 37,
		RULE_array_expr = 38, RULE_struct_expr = 39, RULE_label_expr = 40, RULE_mixed_constructor = 41,
		RULE_label_or_index = 42, RULE_index = 43, RULE_switch_expr = 44, RULE_case_expr = 45,
		RULE_pattern = 46, RULE_apply_expr = 47, RULE_iterator_header = 48, RULE_iterator_operator = 49,
		RULE_iterator_arg_list = 50, RULE_prefix_operator = 51, RULE_prefix_unary_operator = 52,
		RULE_prefix_binary_operator = 53, RULE_iterator = 54, RULE_list = 55,
		RULE_unary_arith_op = 56, RULE_bin_arith_op = 57, RULE_bin_relation_op = 58,
		RULE_bin_bool_op = 59, RULE_atom = 60, RULE_property = 61, RULE_realizabilityInputs = 62,
		RULE_ivc = 63, RULE_main = 64, RULE_assertion = 65;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "decls", "type_block", "type_decl", "type_def", "type_expr",
			"field_decl", "typevar", "const_block", "const_decl", "const_expr", "const_list",
			"const_label_expr", "user_op_decl", "op_kind", "params", "returns_clause",
			"op_body", "local_block", "var_decls", "var_id", "when_decl", "clock_expr",
			"last_decl", "equation", "lhs", "lhs_id", "return_statement", "returns_var",
			"state_machine", "state_decl", "state_body", "let_block", "transition",
			"expr", "simple_expr", "tempo_expr", "bool_expr", "array_expr", "struct_expr",
			"label_expr", "mixed_constructor", "label_or_index", "index", "switch_expr",
			"case_expr", "pattern", "apply_expr", "iterator_header", "iterator_operator",
			"iterator_arg_list", "prefix_operator", "prefix_unary_operator", "prefix_binary_operator",
			"iterator", "list", "unary_arith_op", "bin_arith_op", "bin_relation_op",
			"bin_bool_op", "atom", "property", "realizabilityInputs", "ivc", "main",
			"assertion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'type'", "';'", "'='", "'enum'", "'{'", "','", "'}'", "'bool'",
			"'char'", "'byte'", "'ubyte'", "'short'", "'ushort'", "'int'", "'uint'",
			"'long'", "'ulong'", "'float'", "'real'", "'^'", "':'", "'const'", "'['",
			"']'", "'imported'", "'function'", "'node'", "'('", "')'", "'when'",
			"'not'", "'last'", "'''", "'.'", "'pre'", "'->'", "'fby'", "'merge'",
			"'#'", "'..'", "'default'", "'with'", "'then'", "'else'", "'case'", "'of'",
			"'|'", "'-'", "'true'", "'false'", "'_'", "'mapw'", "'<<'", "'>>'", "'mapwi'",
			"'foldw'", "'foldwi'", "'+'", "'*'", "'/'", "'mod'", "'div'", "'<>'",
			"'<'", "'>'", "'<='", "'>='", "'and'", "'or'", "'xor'", "'make'", "'flatten'",
			"'+$'", "'-$'", "'not$'", "'short$'", "'int$'", "'float$'", "'real$'",
			"'$+$'", "'$-$'", "'$*$'", "'$/$'", "'$mod$'", "'$div$'", "'$=$'", "'$<>$'",
			"'$<$'", "'$>$'", "'$<=$'", "'$>=$'", "'$and$'", "'$or$'", "'$xor$'",
			"'map'", "'fold'", "'mapi'", "'foldi'", "'mapfold'", "'--%PROPERTY'",
			"'--%REALIZABLE'", "'--%IVC'", "'--%MAIN'", "'assert'", "'if'", "'var'",
			"'let'", "'tel'", "'state'", "'unless'", "'until'", "'resume'", "'restart'",
			"'initial'", "'final'", "'automaton'", "'returns'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, "IF", "VAR", "LET",
			"TEL", "STATE", "UNLESS", "UNTIL", "RESUME", "RESTART", "INITIAL", "FINAL",
			"AUTOMATON", "RETURNS", "ID", "CHAR", "INTEGER", "UINT", "FLOAT", "REAL",
			"USHORT", "SHORT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Synlong.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SynlongParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SynlongParser.EOF, 0); }
		public List<DeclsContext> decls() {
			return getRuleContexts(DeclsContext.class);
		}
		public DeclsContext decls(int i) {
			return getRuleContext(DeclsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongVisitor ) return ((SynlongVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 205520898L) != 0)) {
				{
				{
				setState(132);
				decls();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclsContext extends ParserRuleContext {
		public DeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decls; }

		public DeclsContext() { }
		public void copyFrom(DeclsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class UserOpDeclarationContext extends DeclsContext {
		public User_op_declContext user_op_decl() {
			return getRuleContext(User_op_declContext.class,0);
		}
		public UserOpDeclarationContext(DeclsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).enterUserOpDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).exitUserOpDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongVisitor ) return ((SynlongVisitor<? extends T>)visitor).visitUserOpDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclarationContext extends DeclsContext {
		public Type_blockContext type_block() {
			return getRuleContext(Type_blockContext.class,0);
		}
		public TypeDeclarationContext(DeclsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).enterTypeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).exitTypeDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongVisitor ) return ((SynlongVisitor<? extends T>)visitor).visitTypeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ConstDeclarationContext extends DeclsContext {
		public Const_blockContext const_block() {
			return getRuleContext(Const_blockContext.class,0);
		}
		public ConstDeclarationContext(DeclsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).enterConstDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).exitConstDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongVisitor ) return ((SynlongVisitor<? extends T>)visitor).visitConstDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclsContext decls() throws RecognitionException {
		DeclsContext _localctx = new DeclsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decls);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				_localctx = new TypeDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				type_block();
				}
				break;
			case T__21:
				_localctx = new ConstDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				const_block();
				}
				break;
			case T__25:
			case T__26:
				_localctx = new UserOpDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				user_op_decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_blockContext extends ParserRuleContext {
		public List<Type_declContext> type_decl() {
			return getRuleContexts(Type_declContext.class);
		}
		public Type_declContext type_decl(int i) {
			return getRuleContext(Type_declContext.class,i);
		}
		public Type_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).enterType_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).exitType_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongVisitor ) return ((SynlongVisitor<? extends T>)visitor).visitType_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_blockContext type_block() throws RecognitionException {
		Type_blockContext _localctx = new Type_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(T__0);
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(146);
				type_decl();
				setState(147);
				match(T__1);
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_declContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SynlongParser.ID, 0); }
		public Type_defContext type_def() {
			return getRuleContext(Type_defContext.class,0);
		}
		public Type_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).enterType_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).exitType_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongVisitor ) return ((SynlongVisitor<? extends T>)visitor).visitType_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_declContext type_decl() throws RecognitionException {
		Type_declContext _localctx = new Type_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(ID);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(154);
				match(T__2);
				setState(155);
				type_def();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_defContext extends ParserRuleContext {
		public Type_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_def; }

		public Type_defContext() { }
		public void copyFrom(Type_defContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EnumDefContext extends Type_defContext {
		public List<TerminalNode> ID() { return getTokens(SynlongParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SynlongParser.ID, i);
		}
		public EnumDefContext(Type_defContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).enterEnumDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).exitEnumDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongVisitor ) return ((SynlongVisitor<? extends T>)visitor).visitEnumDef(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TypeExprDefContext extends Type_defContext {
		public Type_exprContext type_expr() {
			return getRuleContext(Type_exprContext.class,0);
		}
		public TypeExprDefContext(Type_defContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).enterTypeExprDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongListener ) ((SynlongListener)listener).exitTypeExprDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongVisitor ) return ((SynlongVisitor<? extends T>)visitor).visitTypeExprDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_defContext type_def() throws RecognitionException {
		Type_defContext _localctx = new Type_defContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type_def);
		int _la;
		try {
			setState(170);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case ID:
				_localctx = new TypeExprDefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				type_expr(0);
				}
				break;
			case T__3:
				_localctx = new EnumDefContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				match(T__3);
				setState(160);
				match(T__4);
				setState(161);
				match(ID);
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(162);
					match(T__5);
					setState(163);
					match(ID);
					}
					}
					setState(168);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(169);
				match(T__6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_exprContext extends ParserRuleContext {
		public Type_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_expr; }
